force-app/main/default/objects/SLA__c/SLA__c.object-meta.xml
<CustomObject>
    <label>SLA</label>
    <nameField>
        <label>SLA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>