force-app/main/default/objects/SLA__c/fields/Actual_Response_Duration__c.field-meta.xml
<CustomField>
    <fullName>Actual_Response_Duration__c</fullName>
    <label>Actual Response Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>