force-app/main/default/objects/SLA__c/fields/Actual_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Response_Time__c</fullName>
    <label>Actual Response Time</label>
    <type>DateTime</type>
</CustomField>