force-app/main/default/objects/SLA__c/fields/Ideal_Response_Duration__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Response_Duration__c</fullName>
    <formula>Priority__r.Resolution_Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ideal Response Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>