force-app/main/default/objects/SLA__c/fields/Ideal_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Response_Time__c</fullName>
    <label>Ideal Response Time</label>
    <type>DateTime</type>
</CustomField>