force-app/main/default/objects/SLA__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Priority</label>
    <referenceTo>Priority__c</referenceTo>
    <relationshipLabel>SLA</relationshipLabel>
    <relationshipName>SLA</relationshipName>
    <type>Lookup</type>
</CustomField>