force-app/main/default/objects/SLA__c/fields/Service_Agent__c.field-meta.xml
<CustomField>
    <fullName>Service_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Agent</label>
    <referenceTo>Service_Agent__c</referenceTo>
    <relationshipLabel>SLA</relationshipLabel>
    <relationshipName>SLA</relationshipName>
    <type>Lookup</type>
</CustomField>