force-app/main/default/objects/SLA__c/fields/SLA_Breached__c.field-meta.xml
<CustomField>
    <fullName>SLA_Breached__c</fullName>
    <formula>IF(Actual_Response_Time__c &gt; Ideal_Response_Time__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Breached?</label>
    <type>Checkbox</type>
</CustomField>