force-app/main/default/objects/SLA__c/fields/SLA_Request_Time__c.field-meta.xml
<CustomField>
    <fullName>SLA_Request_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>SLA Request Time</label>
    <type>DateTime</type>
</CustomField>