force-app/main/default/objects/SLA__c/fields/SLA_Response_Time_Difference__c.field-meta.xml
<CustomField>
    <fullName>SLA_Response_Time_Difference__c</fullName>
    <formula>ROUND(( Actual_Response_Duration__c -  Ideal_Response_Duration__c ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Response Time Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>